Sat Jan 22 11:24:43 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: internalize all text node content from
	  stylesheet documents with the stylesheet dictionnary

Fri Jan 21 12:04:18 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* tests/plugins/Makefile.am: Applied patch 11 (with small
	  modification) from Joel

Thu Jan 20 21:05:27 CET 2005 Daniel Veillard <daniel@veillard.com>

	* tests/plugins/Makefile.am tests/plugins/testplugin.c: applied
	  patch 10 from Joel Reed

Wed Jan 19 10:08:55 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltwin32config.h, libxslt/xsltwin32config.h.in:
	  fixed a small error in LIBXSLT_VERSION_EXTRA pointed out
	  by Michael.Hewarth on the mailing list
	 
Wed Jan 19 13:58:16 CET 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in: patch #9 from Joel Reed

Wed Jan 19 10:21:37 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* transform.c: fixed problem with parserOptions not being
	  set before loading a new document (bug 164530)

Mon Jan 17 16:50:02 CET 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/Makefile.am libxslt/xsltwin32config.h
	  tests/Makefile.am tests/plugins/Makefile.am
	  tests/plugins/testplugin.c: applied another patch from Joel Reed
	  still failing here but looking better

Sun Jan 16 00:09:11 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: applied another patch from Joel Reed

Sat Jan 15 13:54:28 CET 2005 Daniel Veillard <daniel@veillard.com>

	* tests/plugins/plugin.* tests/Makefile.am libxslt/extensions.c
	  libxslt/Makefile.am configure.in: Applied another patch from
	  Joel Reed, fixed a segfault and changed the configure code
	  a bit to work in my debug environment.

Tue Jan 11 10:50:33 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* configure.in: added python2.4 to the list of accepted
	  versions (bug 163274)

Sun Jan  9 17:04:23 CET 2005 Daniel Veillard <daniel@veillard.com>
